[tool.poetry]
name = 'pypnp'
version = '0.0.2'
description = 'Alternative module resolution system for python'
authors = ['noahnu <noah@noahnu.com>']
license = 'MIT'
classifiers = [
  'Programming Language :: Python :: 3',
  'Intended Audience :: Developers',
  'Operating System :: OS Independent',
]
readme = 'README.md'
repository = 'https://github.com/noahnu/pypnp'
include = ['pypnp']

[tool.poetry.scripts]
pypnp-run = 'pypnp.run:main'

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
invoke = '^2.0.0'
pip-tools = "^7.3.0"
twine = '^4.0.2'
semver = '^3.0.0'
isort = '^5.12.0'
black = '^23.1.0'
py-githooks = "^1.1.1"
setuptools-scm = '^8.0.0'
flake8 = "^6.1.0"
pylint = "^3.0.2"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.vscode
    | \.venv
    | \.poetry
    | pypnp.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
line_length = 88
known_first_party = 'pypnp'
profile = 'black'
skip = '''
.eggs,
.mypy_cache,
.venv,
pypnp.venv,
build,
dist,
stubs,
.poetry,
'''

[tool.pylint.main]
ignore = ["example"]
ignore-patterns = ["^\\.#"]

[tool.pylint."messages control"]
# Only show warnings with the listed confidence levels. Leave empty to show all.
# Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]

# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = ["missing-module-docstring"]

# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time (only on the command line, not in the configuration file where it
# should appear only once). See also the "--disable" option for examples.
# enable =
